# rca

./: .gitignore  Cargo.toml  LICENSE  README.md  SHADER_CA_README.md  build.rs  makefile  package-lock.json  package.json
.github/workflows/: deploy.yaml
client/: components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  vite.config.mjs  vitest.config.js
client/coverage/: coverage-final.json  index.html
client/coverage/client/: auto-imports.d.ts.html  components.d.ts.html  eslint.config.js.html  index.html  typed-router.d.ts.html  vite.config.mjs.html  vitest.config.js.html
client/coverage/client/src/: App.vue.html  index.html  main.js.html  utils.js.html
client/coverage/client/src/components/: Brush.vue.html  ControlPanel.vue.html  FileManager.vue.html  Midi.vue.html  (+8 more)
client/src/: main.js  test-setup.js  utils.js
client/src/components/: Brush.vue  ControlPanel.vue  FileManager.vue  Image.vue  ImageManager.vue  Midi.vue  RulePicker.vue  Slider.vue  Universe.vue  Viewport.vue  caShader.js  glSetup.js
client/src/components/__tests__/: Midi.test.js
client/src/layouts/: default.vue
client/src/pages/: index.vue
client/src/styles/: settings.scss
client/src/test/: brushStampInteractiveTest.html  brushStampTest.js  brushVerificationTest.html  caShaderTest.js  catmullRomTest.html  quickTest.html  samplingTest.html
config/: custom-environment-variables.json  default.json
src/: lib.rs  tests.rs
web-client/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
web-client/src/: main.js  main.ts  style.css
(+15 files in other folders)
