[package]
name = "ca"
version = "0.1.0"
edition = "2021"
description = "Rust Cellular Automata"
repository = "https://github.com/TonyGermaneri/rca"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
gloo-net = "0.6.0"
wasm-logger = "0.2.0"
log = "0.4.27"
gloo-utils = "0.2.0"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
rand = { version = "0.9.1", features = ["std"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }


[features]
default = ["console_error_panic_hook", "wee_alloc"]


[dependencies.web-sys]
version = "0.3.4"
features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", "HtmlElement", "Document"]


[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.41"
